# TodoList

./: CMakeLists.txt  main.cpp  todo_task
includes/: ClearScreen.h  Task.h  TaskHandler.h  UserInterface.h
sources/: ClearScreen.cpp  Task.cpp  TaskHandler.cpp  UserInterface.cpp
